<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MinecraftGuide</string>
    <string name="app_name_readable">Minecraft Guide</string><string name="action_settings">Settings</string>
    <string name="crafting">Crafting</string>
    <string name="itemlist">Item list</string>
    <string name="servercommands">Server commands</string>
    <string name="videos">Videos</string>
    <string name="imgdescription">Item image</string>
    <string name="recipeimage">Recipe image</string>
    <string name="recipes">Recipes</string>
    <string name="ingredients">Ingredients required</string>
    <string name="ingredientsresult">Item acquired</string>
    <string name="boxdesc">Ingredient box</string>
    <string name="relatedrecipes">This recipe as an ingredient</string>
    <string name="chat">MC Talk</string>
    
	
</resources>
