<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/minecraft_portrait"
    android:alpha="0.75"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app_name_readable"
        android:textSize="32sp"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/btnCrafting"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:alpha="0.80"
        android:background="@drawable/button_selector"
        android:text="@string/crafting"
        android:textColor="@android:color/white"
        android:onClick="craftingButtonClicked" />
    
    
    <Button
        android:id="@+id/btnItemList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnCrafting"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_selector"
        android:alpha="0.80"
        android:text="@string/itemlist"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/btnServerCommands"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnItemList"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_selector"
        android:alpha="0.80"
        android:text="@string/servercommands"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/btnVideos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnServerCommands"
        android:background="@drawable/button_selector"
        android:alpha="0.80"
        android:text="@string/videos"
        android:textColor="@android:color/white" />

</RelativeLayout>
