<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBBBBB" >

    <TextView
        android:id="@+id/txtIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/ingredients" />

    <ImageView
        android:id="@+id/imgBox1"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/txtIngredients"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr1"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="22dp"
        android:layout_below="@id/txtIngredients"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox2"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_toRightOf="@id/imgBox1"
        android:layout_alignBottom="@id/imgBox1"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr2"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/imgBox1"
        android:layout_alignBottom="@id/imgIngr1"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox3"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_toRightOf="@id/imgBox2"
        android:layout_alignBottom="@id/imgBox2"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr3"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/imgBox2"
        android:layout_alignBottom="@id/imgIngr2"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox4"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignLeft="@id/imgBox1"
        android:layout_below="@id/imgBox1"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr4"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_alignLeft="@id/imgBox1"
        android:layout_below="@id/imgBox1"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox5"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_toRightOf="@id/imgBox4"
        android:layout_alignBottom="@id/imgBox4"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr5"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/imgBox4"
        android:layout_alignBottom="@id/imgIngr4"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox6"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_toRightOf="@id/imgBox5"
        android:layout_alignBottom="@id/imgBox5"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr6"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/imgBox5"
        android:layout_alignBottom="@id/imgIngr5"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox7"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignLeft="@id/imgBox4"
        android:layout_below="@id/imgBox4"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr7"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_alignLeft="@id/imgBox4"
        android:layout_below="@id/imgBox4"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox8"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_toRightOf="@id/imgBox7"
        android:layout_alignBottom="@id/imgBox7"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr8"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/imgBox7"
        android:layout_alignBottom="@id/imgIngr7"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgBox9"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_toRightOf="@id/imgBox8"
        android:layout_alignBottom="@id/imgBox8"
        android:src="@drawable/box"
        android:contentDescription="@string/boxdesc" />
    
    <ImageView
        android:id="@+id/imgIngr9"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/imgBox8"
        android:layout_alignBottom="@id/imgIngr7"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/boxdesc" />

    <ImageView
        android:id="@+id/imgResultBox"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignRight="@+id/txtResult"
        android:layout_below="@+id/imgBox3"
        android:layout_marginRight="24dp"
        android:src="@drawable/box"
        android:contentDescription="@string/ingredientsresult" />

    <ImageView
        android:id="@+id/imgResult"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignRight="@+id/txtResult"
        android:layout_below="@+id/imgBox3"
        android:layout_marginRight="25dp"
        android:src="@drawable/baked_potato"
        android:contentDescription="@string/ingredientsresult" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/txtRelatedRecipes"
        android:layout_toRightOf="@+id/imgResultBox"
        android:transcriptMode="alwaysScroll" >

    </ListView>

    <TextView
        android:id="@+id/txtRelatedRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtResult"
        android:layout_alignBottom="@+id/txtResult"
        android:layout_alignLeft="@android:id/list"
        android:layout_marginLeft="48dp"
        android:text="@string/relatedrecipes" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtIngredients"
        android:layout_alignBottom="@+id/txtIngredients"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/imgBox3"
        android:text="@string/ingredientsresult" />
    
</RelativeLayout>